MENU NAV ALL PAGES

--- a/details_luchador_6.html
+++ b/details_luchador_6.html
@@ -11,19 +11,15 @@
 <body id="bck_lutteurs">
 
 <header>
+    <a href="Index.html"><img src="Image/logo-solo.png"></a>
     <nav>
-
         <ul>
             <li><a href="gallerie_lutteur.html">Luchadores</a></li>
             <li><a href="Events.html">Eventos</a></li>
             <li><a href="contacts.html">Contacto</a></li>
             <li><a href="infos.html">Info</a></li>
-
         </ul>
     </nav>
-
-    <a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>
-
 </header>
 
 <main id="details">
