--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,8 @@
 
 </head>
 <header>
+    <a href="Index.html"><img src="Image/logo-solo.png"></a>
     <nav>
-
         <ul>
             <li><a href="gallerie_lutteur.html">Luchadores</a></li>
             <li><a href="Events.html">Eventos</a></li>
@@ -18,7 +18,6 @@
             <li><a href="infos.html">Info</a></li>
         </ul>
     </nav>
-    <a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>
 </header>
 <body id="bckg-index">
 
