--- a/contacts.html
+++ b/contacts.html
@@ -10,16 +10,15 @@
     </head>
     <body id="contacts">
     <header>
+        <a href="Index.html"><img src="Image/logo-solo.png"></a>
         <nav>
-
             <ul>
                 <li><a href="gallerie_lutteur.html">Luchadores</a></li>
                 <li><a href="Events.html">Eventos</a></li>
                 <li><a href="contacts.html">Contacto</a></li>
-                <li><a href="#">Info</a></li>
+                <li><a href="infos.html">Info</a></li>
             </ul>
         </nav>
-        <a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>
     </header>
         <!--main-->
         <main>
