--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -9,17 +9,16 @@
 </head>
 <body id="bck_lutteurs">
 <header>
-        <nav>
-            <ul>
-
-                <li><a href="gallerie_lutteur.html">Luchadores</a></li>
-                <li><a href="Events.html">Eventos</a></li>
-                <li><a href="contacts.html">Contacto</a></li>
-                <li><a href="produits.html<">Info</a></li>
-            </ul>
-        </nav>
-        <a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>
-    </header>
+    <a href="Index.html"><img src="Image/logo-solo.png"></a>
+    <nav>
+        <ul>
+            <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+            <li><a href="Events.html">Eventos</a></li>
+            <li><a href="contacts.html">Contacto</a></li>
+            <li><a href="infos.html">Info</a></li>
+        </ul>
+    </nav>
+</header>
 
 <main id="luchador">
 
