--- a/details_luchador_5.html
+++ b/details_luchador_5.html
@@ -9,6 +9,7 @@
 
 </head>
 <body id="bck_lutteurs">
+<audio autoplay src="music/voice5.wav"></audio>
 
 <header>
     <a href="Index.html"><img src="Image/logo-solo.png"></a>
@@ -42,32 +43,34 @@
     </section><
     </div>
 
-    <audio autoplay loop src="music/" loop/>
+
 
 </main>
 
 
 <footer>
     <nav>
-        <ul>
+        <ul> <!--HYPERLIENS-->
             <li><a href="gallerie_lutteur.html">Luchadores</a></li>
             <li><a href="Events.html">Eventos</a></li>
             <li><a href="Index.html">Index</a></li>
             <li><a href="contacts.html">Contacto</a></li>
-            <li><a href="infos.html">Info</a></li>
-
+            <li><a href="#">Info</a></li>
         </ul>
 
-        <ul id="social">
+        <div> <!--ADRESSE-->
+            <p>11612 Calle San Javier</p>
+            <p>Collinia San Pedro CP 64390</p>
+            <p>Zacatecas, ZAC</p>
+        </div>
+
+        <ul> <!--RESEAUX SOCIAUX-->
             <li><a href="https://fr-ca.facebook.com/"><img src="image/facebook.png" alt="facebook"/></a></li>
             <li><a href="https://www.google.ca/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=google"><img src="image/google.png" alt="google"/></a></li>
             <li><a href="https://www.youtube.com/?hl=fr&gl=CA"><img src="image/youtube.png" alt="youtube"/></a></li>
             <li><a href="https://twitter.com/?lang=fr"><img src="image/twitter.png" alt="twitter"/></a></li>
         </ul>
     </nav>
-
-    <audio autoplay src="music/voice5.wav"/>
-
 </footer>
 
 </body>
