--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -1,100 +1,98 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Gallerie Luchador</title>
-    <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
-    <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
-<body id="bck_lutteurs">
-<header>
-    <a href="Index.html"><img src="Image/logo-solo.png"></a>
-    <nav>
-        <ul>
-            <li><a href="gallerie_lutteur.html">Luchadores</a></li>
-            <li><a href="Events.html">Eventos</a></li>
-            <li><a href="contacts.html">Contacto</a></li>
-            <li><a href="infos.html">Info</a></li>
-        </ul>
-    </nav>
-</header>
+    <head>
+        <meta charset="UTF-8">
+        <title>Gallerie Luchador</title>
+        <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+        <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </head>
+    <body id="bck_lutteurs">
+        <header>
+            <a href="Index.html"><img src="Image/logo-solo.png"></a>
+            <nav>
+                <ul>
+                    <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+                    <li><a href="Events.html">Eventos</a></li>
+                    <li><a href="contacts.html">Contacto</a></li>
+                    <li><a href="infos.html">Info</a></li>
+                </ul>
+            </nav>
+        </header>
 
-<main id="luchador">
+        <main id="luchador">
+            <h1>LA GALLERIA DE LOS LUCHADORES</h1>
 
-    <h1>LA GALLERIA DE LOS LUCHADORES</h1>
+            <ul>
+                <li>
+                    <img src="Image/luchador1.png" alt="luchador1"/>
+                    <h2>STUKA EL GALLO</h2>
+                    <a href="details_luchador_1.html">Click para ver la ficha completo</a>
+                </li>
 
-    <ul>
+                <li>
+                    <img src="Image/luchador2.png" alt="luchador2"/>
+                    <h2>MALO CASAS</h2>
+                    <a href="details_luchador_2.html">Click para ver la ficha completo</a>
+                </li>
 
-    <li>
-        <img src="Image/luchador1.png" alt="luchador1"/>
-        <h2>STUKA EL GALLO</h2>
-        <a href="details_luchador_1.html">Click para ver la ficha completo</a>
-    </li>
+                <li>
+                    <img src="Image/luchador3.png" alt="luchador3"/>
+                    <h2>SANGRE AZTECA</h2>
+                    <a href="details_luchador_3.html">Click para ver la ficha completo</a>
+                </li>
 
-    <li>
-        <img src="Image/luchador2.png" alt="luchador2"/>
-        <h2>MALO CASAS</h2>
-        <a href="details_luchador_2.html">Click para ver la ficha completo</a>
-    </li>
+                <li>
+                    <img src="Image/luchador4.png" alt="luchador4"/>
+                    <h2>AVERNO</h2>
+                    <a href="details_luchador_4.html">Click para ver la ficha completo</a>
+                </li>
 
+                <li>
+                    <img src="Image/luchador5.png" alt="luchador5"/>
+                    <h2>MEPHISTO</h2>
+                    <a href="details_luchador_5.html">Click para ver la ficha completo</a>
+                </li>
 
-    <li>
-        <img src="Image/luchador3.png" alt="luchador3"/>
-        <h2>SANGRE AZTECA</h2>
-        <a href="details_luchador_3.html">Click para ver la ficha completo</a>
-    </li>
+                <li>
+                    <img src="Image/luchador6.png" alt="luchador6"/>
+                    <h2>GALLO LOCO</h2>
+                    <a href="details_luchador_6.html">Click para ver la ficha completo</a>
+                </li>
 
-    <li>
-        <img src="Image/luchador4.png" alt="luchador4"/>
-        <h2>AVERNO</h2>
-        <a href="details_luchador_4.html">Click para ver la ficha completo</a>
-    </li>
+             </ul>
 
+            <p>LUCHADORES</p>
 
-    <li>
-        <img src="Image/luchador5.png" alt="luchador5"/>
-        <h2>MEPHISTO</h2>
-        <a href="details_luchador_5.html">Click para ver la ficha completo</a>
-    </li>
-
-    <li>
-        <img src="Image/luchador6.png" alt="luchador6"/>
-        <h2>GALLO LOCO</h2>
-        <a href="details_luchador_6.html">Click para ver la ficha completo</a>
-    </li>
-
-     </ul>
-
-    <p>LUCHADORES</p>
-
-    <audio autoplay src="music/mexican.wav" />
+            <audio autoplay src="music/mexican.wav" />
 
 
 
-</main>
+        </main>
 
-<footer>
-    <nav>
-        <ul>
-            <li><a href="gallerie_lutteur.html">Luchadores</a></li>
-            <li><a href="Events.html">Eventos</a></li>
-            <li><a href="Index.html">Index</a></li>
-            <li><a href="contacts.html">Contacto</a></li>
-            <li><a href="#">Info</a></li>
+        <footer>
+            <nav>
+                <ul> <!--HYPERLIENS-->
+                    <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+                    <li><a href="Events.html">Eventos</a></li>
+                    <li><a href="Index.html">Index</a></li>
+                    <li><a href="contacts.html">Contacto</a></li>
+                    <li><a href="#">Info</a></li>
+                </ul>
 
-        </ul>
+                <div> <!--ADRESSE-->
+                    <p>11612 Calle San Javier</p>
+                    <p>Collinia San Pedro CP 64390</p>
+                    <p>Zacatecas, ZAC</p>
+                </div>
 
-        <ul id="social">
-            <li><a href="https://fr-ca.facebook.com/"><img src="image/facebook.png" alt="facebook"/></a></li>
-            <li><a href="https://www.google.ca/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=google"><img src="image/google.png" alt="google"/></a></li>
-            <li><a href="https://www.youtube.com/?hl=fr&gl=CA"><img src="image/youtube.png" alt="youtube"/></a></li>
-            <li><a href="https://twitter.com/?lang=fr"><img src="image/twitter.png" alt="twitter"/></a></li>
-        </ul>
-    </nav>
-
-</footer>
-
-</body>
-
+                <ul> <!--RESEAUX SOCIAUX-->
+                    <li><a href="https://fr-ca.facebook.com/"><img src="image/facebook.png" alt="facebook"/></a></li>
+                    <li><a href="https://www.google.ca/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=google"><img src="image/google.png" alt="google"/></a></li>
+                    <li><a href="https://www.youtube.com/?hl=fr&gl=CA"><img src="image/youtube.png" alt="youtube"/></a></li>
+                    <li><a href="https://twitter.com/?lang=fr"><img src="image/twitter.png" alt="twitter"/></a></li>
+                </ul>
+            </nav>
+        </footer>
+    </body>
 </html>
