correction du logo menu

--- a/Events.html
+++ b/Events.html
@@ -45,6 +45,7 @@
 </tr>
 </tbody>
 </table>
+
                                        <!----------------------------premier tableau de la page events------------------------>
 
                                        <table class="group">
@@ -91,7 +92,7 @@
         <td><img src="Image/FCW-LA.jpg" alt="Masked Mania" ></td>
     </tr>
     <tr>
-        <td><p>público estadounidense a los de alto vuelo se mueve, explosivos de la lucha libre. Una antigua tradición de combate, ver como el bien y el mal hacer la guerra en un campo de batalla valiente llamado "El Templo".</p></td>
+        <td><p>público estadounidense a los de alto vuelo se mueve, explosivos de la lucha libre. Una antigua tradición de combate, ver como el bien y el mal hacer la guerra en un campo de batalla valiente llamado "El Templo" estadounidense.</p></td>
     </tr>
     </tbody>
 </table>
@@ -116,12 +117,16 @@
         <td><img src="Image/lucha-libre-pro-wrestling-11.14.15.jpg" alt="Masked Mania" ></td>
     </tr>
     <tr>
-        <td><p> del viernes noche de la pelea en la Arena México. Este local de larga data en el centro de Ciudad de México es el lugar para ver uno de los eventos deportivos más estridentes y dramáticos del país, la lucha libre.</p></td>
+        <td><p> del viernes noche de la pelea en la Arena México. Este local de larga data en el centro de Ciudad de México es el lugar para ver uno de los eventos deportivos más estridentes y dramáticos del país estadounidense, la lucha libre.</p></td>
     </tr>
     </tbody>
 </table>
 
 </main>
+<!--texte de la page events -->
+<aside>
+    <p>Events</p>
+</aside>
 
 <footer>
     <nav>
