RESPONSIVE page contacts

--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,7 @@
         <main>
             <section>
             <h2>Contáctenos</h2>
-                <form method="get" action="index.html">
+                <form method="get" action="Index.html">
 
                     <fieldset> <!--PREMIER FIELDSET-->
                         <legend>Su información personal</legend>
