responsive page lutteurs & details

--- a/details_luchador_5.html
+++ b/details_luchador_5.html
@@ -24,7 +24,7 @@
 </header>
 
 <main id="details">
-    <div id="luch-info">
+
     <section>
 
         <figure>
@@ -40,8 +40,8 @@
             <p>Victorias: 22</p>
             <meter value="3" min="0" max="5" low="1" high="3"></meter>
         </article>
-    </section><
-    </div>
+    </section>
+
 
 
 
