--- a/Events.html
+++ b/Events.html
@@ -124,9 +124,9 @@
 
 </main>
 <!--texte de la page events -->
-<aside>
-    <p>Events</p>
-</aside>
+<!--<aside>-->
+    <!--<p>Events</p>-->
+<!--</aside>-->
 
 <footer>
     <nav>
